Rebus pubsub not working. Grr.

--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -81,6 +81,9 @@
       <HintPath>packages\Microsoft.Extensions.DependencyInjection.Abstractions.2.1.1\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
@@ -109,17 +112,38 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.Mvc.5.2.4\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.Razor.3.2.4\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\ServicesConfiguratorCm.cs" />
+    <Compile Include="Bus\HtmlCacheMessageBusSubscriber.cs" />
+    <Compile Include="Bus\HtmlCacheMessageBusPublisher.cs" />
     <Compile Include="Configuration\ServicesConfigurator.cs" />
+    <Compile Include="Configuration\ServicesConfiguratorCm.cs" />
     <Compile Include="Events\ItemPrePublish.cs" />
+    <Compile Include="Handlers\RecomputePersistedHtmlCacheBusMessageHandler.cs" />
     <Compile Include="Handlers\BroadcastCacheBusMessageHandler.cs" />
     <Compile Include="Handlers\AddToCacheStoreBusMessageHandler.cs" />
     <Compile Include="Handlers\DeleteSiteFromCacheBusMessageHandler.cs" />
     <Compile Include="Handlers\DeleteFromCacheBusMessageHandler.cs" />
     <Compile Include="Handlers\AddToCacheBusMessageHandler.cs" />
-    <Compile Include="Bus\HtmlCacheMessageBus.cs" />
+    <Compile Include="Bus\HtmlCacheMessageBusSend.cs" />
     <Compile Include="Commands\SiteClearCacheAllSitesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheCommand.cs" />
@@ -128,6 +152,7 @@
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
     <Compile Include="Messages\AddToCacheStore.cs" />
     <Compile Include="Messages\BroadcastCache.cs" />
+    <Compile Include="Messages\RecomputePersistedHtmlCache.cs" />
     <Compile Include="Models\CacheStoreSearchResult.cs" />
     <Compile Include="Messages\SiteMetaData.cs" />
     <Compile Include="Messages\DeleteSiteFromCache.cs" />
@@ -155,6 +180,7 @@
     <Content Include="sitecore\admin\HtmlCacheViewer.aspx" />
     <Content Include="App_Config\Include\zFoundation\zFoundation.HtmlCache.config" />
     <None Include="packages.config" />
+    <Content Include="Views\HtmlCache\HtmlCacheLayout.cshtml" />
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup />
