--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -1,5 +1,5 @@
-﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
-  <sitecore>
+﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:messagingTransport="http://www.sitecore.net/xmlconfig/messagingTransport/">
+  <sitecore role:require="Standalone or ContentManagement or ContentDelivery" messagingTransport:require="SQL">
     <commands role:require="Standalone or ContentManagement">
       <command name="cache:SiteClearCacheCommand" type="Foundation.HtmlCache.Commands.SiteClearCacheCommand,Foundation.HtmlCache"/>
       <command name="cache:SiteClearCacheAllLanguagesCommand" type="Foundation.HtmlCache.Commands.SiteClearCacheAllLanguagesCommand,Foundation.HtmlCache"/>
@@ -71,36 +71,50 @@
 
     <Messaging>
       <Rebus>
-        <Foundation.HtmlCache.Bus.HtmlCacheMessageBus>
+        <Foundation.HtmlCache.Bus.HtmlCacheMessageBusSend>
           <Transport>
             <SqlServer>
               <OneWay role:require="Standalone">false</OneWay>
               <OneWay role:require="ContentManagement">true</OneWay>
               <OneWay role:require="ContentDelivery">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <TableName>Sitecore_Transport</TableName>
               <InputQueueName>HtmlCacheMessageQueue</InputQueueName>
             </SqlServer>
           </Transport>
           <Routing>
             <TypeBasedMappings>
               <TypeMappings>
-                <TrackItemMapping>
-                  <Type>Foundation.HtmlCache.Models.AddToCache, Foundation.HtmlCache</Type>
+                <AddToCacheMapping>
+                  <Type>Foundation.HtmlCache.Messages.AddToCache, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </TrackItemMapping>
-                <ItemsPublishedMapping>
-                  <Type>Foundation.HtmlCache.Models.DeleteFromCache, Foundation.HtmlCache</Type>
+                </AddToCacheMapping>
+                <AddToCacheStoreMapping>
+                  <Type>Foundation.HtmlCache.Messages.AddToCacheStore, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </ItemsPublishedMapping>
-                <ClearSiteMapping>
-                  <Type>Foundation.HtmlCache.Models.DeleteSiteFromCache, Foundation.HtmlCache</Type>
+                </AddToCacheStoreMapping>
+                <RecomputePersistedHtmlCacheMapping>
+                  <Type>Foundation.HtmlCache.Messages.RecomputePersistedHtmlCache, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </ClearSiteMapping>
+                </RecomputePersistedHtmlCacheMapping>
+
+
+                <DeleteFromCacheMapping>
+                  <Type>Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache</Type>
+                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
+                </DeleteFromCacheMapping>
+                <BroadcastCacheMapping>
+                  <Type>Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache</Type>
+                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
+                </BroadcastCacheMapping>
+                <DeleteSiteFromCacheMapping>
+                  <Type>Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache</Type>
+                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
+                </DeleteSiteFromCacheMapping>
+
               </TypeMappings>
             </TypeBasedMappings>
           </Routing>
-          <Options role:require="Standalone or ContentDelivery">
+          <Options role:require="Standalone or ContentManagement or ContentDelivery">
             <SetNumberOfWorkers>1</SetNumberOfWorkers>
             <SimpleRetryStrategy>
               <ErrorQueueAddress>Error</ErrorQueueAddress>
@@ -109,7 +123,45 @@
             </SimpleRetryStrategy>
           </Options>
           <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory,Sitecore.Messaging"/>
-        </Foundation.HtmlCache.Bus.HtmlCacheMessageBus>
+        </Foundation.HtmlCache.Bus.HtmlCacheMessageBusSend>
+
+        <!-- <Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher> -->
+        <!--   <Transport> -->
+        <!--     <SqlServer> -->
+        <!--       <OneWay role:require="Standalone">false</OneWay> -->
+        <!--       <OneWay role:require="ContentManagement">true</OneWay> -->
+        <!--       <OneWay role:require="ContentDelivery">true</OneWay> -->
+        <!--       <ConnectionStringOrName>messaging</ConnectionStringOrName> -->
+        <!--       <InputQueueName>HtmlCacheMessageBusSubscriber</InputQueueName> -->
+        <!--     </SqlServer> -->
+        <!--   </Transport> -->
+        <!--   <Subscribers> -->
+        <!--     <TypeMappings> -->
+        <!--       <DeleteFromCacheMapping> -->
+        <!--         <Type>Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache</Type> -->
+        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
+        <!--       </DeleteFromCacheMapping> -->
+        <!--       <BroadcastCacheMapping> -->
+        <!--         <Type>Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache</Type> -->
+        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
+        <!--       </BroadcastCacheMapping> -->
+        <!--       <DeleteSiteFromCacheMapping> -->
+        <!--         <Type>Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache</Type> -->
+        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
+        <!--       </DeleteSiteFromCacheMapping> -->
+        <!--     </TypeMappings> -->
+        <!--   </Subscribers> -->
+        <!--   <Options role:require="Standalone or ContentManagement or ContentDelivery"> -->
+        <!--     <SetNumberOfWorkers>1</SetNumberOfWorkers> -->
+        <!--     <SimpleRetryStrategy> -->
+        <!--       <ErrorQueueAddress>Error</ErrorQueueAddress> -->
+        <!--       <MaxDeliveryAttempts>0</MaxDeliveryAttempts> -->
+        <!--       <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled> -->
+        <!--     </SimpleRetryStrategy> -->
+        <!--   </Options> -->
+        <!--   <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory,Sitecore.Messaging"/> -->
+        <!-- </Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher> -->
+
       </Rebus>
     </Messaging>
 
@@ -143,7 +195,7 @@
             </strategies>
             <locations hint="list:AddCrawler">
               <crawler type="Sitecore.ContentSearch.SitecoreItemCrawler, Sitecore.ContentSearch">
-                <Database>web</Database>
+                <Database>master</Database>
                 <Root>/sitecore/system/Modules/HtmlCache</Root>
               </crawler>
             </locations>
