Final commit of using sitecore messaging. Will change to use rebus directely.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -71,6 +71,7 @@
 
     <Messaging>
       <Rebus>
+        <!-- point to point -->
         <Foundation.HtmlCache.Bus.HtmlCacheMessageBusSend>
           <Transport>
             <SqlServer>
@@ -84,33 +85,21 @@
           <Routing>
             <TypeBasedMappings>
               <TypeMappings>
+                <!-- CD > CD -->
                 <AddToCacheMapping>
                   <Type>Foundation.HtmlCache.Messages.AddToCache, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
                 </AddToCacheMapping>
+                <!-- CD > single CM -->
                 <AddToCacheStoreMapping>
                   <Type>Foundation.HtmlCache.Messages.AddToCacheStore, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
                 </AddToCacheStoreMapping>
+                <!-- CD > single CM -->
                 <RecomputePersistedHtmlCacheMapping>
                   <Type>Foundation.HtmlCache.Messages.RecomputePersistedHtmlCache, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
                 </RecomputePersistedHtmlCacheMapping>
-
-
-                <DeleteFromCacheMapping>
-                  <Type>Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache</Type>
-                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </DeleteFromCacheMapping>
-                <BroadcastCacheMapping>
-                  <Type>Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache</Type>
-                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </BroadcastCacheMapping>
-                <DeleteSiteFromCacheMapping>
-                  <Type>Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache</Type>
-                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
-                </DeleteSiteFromCacheMapping>
-
               </TypeMappings>
             </TypeBasedMappings>
           </Routing>
@@ -125,49 +114,81 @@
           <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory,Sitecore.Messaging"/>
         </Foundation.HtmlCache.Bus.HtmlCacheMessageBusSend>
 
-        <!-- <Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher> -->
-        <!--   <Transport> -->
-        <!--     <SqlServer> -->
-        <!--       <OneWay role:require="Standalone">false</OneWay> -->
-        <!--       <OneWay role:require="ContentManagement">true</OneWay> -->
-        <!--       <OneWay role:require="ContentDelivery">true</OneWay> -->
-        <!--       <ConnectionStringOrName>messaging</ConnectionStringOrName> -->
-        <!--       <InputQueueName>HtmlCacheMessageBusSubscriber</InputQueueName> -->
-        <!--     </SqlServer> -->
-        <!--   </Transport> -->
-        <!--   <Subscribers> -->
-        <!--     <TypeMappings> -->
-        <!--       <DeleteFromCacheMapping> -->
-        <!--         <Type>Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache</Type> -->
-        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
-        <!--       </DeleteFromCacheMapping> -->
-        <!--       <BroadcastCacheMapping> -->
-        <!--         <Type>Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache</Type> -->
-        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
-        <!--       </BroadcastCacheMapping> -->
-        <!--       <DeleteSiteFromCacheMapping> -->
-        <!--         <Type>Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache</Type> -->
-        <!--         <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue> -->
-        <!--       </DeleteSiteFromCacheMapping> -->
-        <!--     </TypeMappings> -->
-        <!--   </Subscribers> -->
-        <!--   <Options role:require="Standalone or ContentManagement or ContentDelivery"> -->
-        <!--     <SetNumberOfWorkers>1</SetNumberOfWorkers> -->
-        <!--     <SimpleRetryStrategy> -->
-        <!--       <ErrorQueueAddress>Error</ErrorQueueAddress> -->
-        <!--       <MaxDeliveryAttempts>0</MaxDeliveryAttempts> -->
-        <!--       <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled> -->
-        <!--     </SimpleRetryStrategy> -->
-        <!--   </Options> -->
-        <!--   <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory,Sitecore.Messaging"/> -->
-        <!-- </Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher> -->
+        <!-- pub/sub-->
+        <Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher>
+          <Transport>
+            <SqlServer>
+              <OneWay role:require="Standalone">false</OneWay>
+              <OneWay role:require="ContentManagement">true</OneWay>
+              <OneWay role:require="ContentDelivery">true</OneWay>
+              <ConnectionStringOrName>messaging</ConnectionStringOrName>
+              <InputQueueName>HtmlCacheMessageBusSubscriber</InputQueueName>
+            </SqlServer>
+          </Transport>
+          <Subscribers>
+            <TypeMappings>
+              <!-- CM > All CDs -->
+              <DeleteFromCacheMapping>
+                <Type>Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache</Type>
+                <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue>
+              </DeleteFromCacheMapping>
+              <!-- CM > All CDs -->
+              <BroadcastCacheMapping>
+                <Type>Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache</Type>
+                <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue>
+              </BroadcastCacheMapping>
+              <!-- CM > All CDs -->
+              <DeleteSiteFromCacheMapping>
+                <Type>Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache</Type>
+                <PublisherQueue>HtmlCacheMessageBusPublisher</PublisherQueue>
+              </DeleteSiteFromCacheMapping>
+            </TypeMappings>
+          </Subscribers>
+          <Options role:require="Standalone or ContentManagement or ContentDelivery">
+            <SetNumberOfWorkers>1</SetNumberOfWorkers>
+            <SimpleRetryStrategy>
+              <ErrorQueueAddress>Error</ErrorQueueAddress>
+              <MaxDeliveryAttempts>0</MaxDeliveryAttempts>
+              <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
+            </SimpleRetryStrategy>
+          </Options>
+          <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory,Sitecore.Messaging"/>
+        </Foundation.HtmlCache.Bus.HtmlCacheMessageBusPublisher>
 
       </Rebus>
     </Messaging>
 
     <services>
-      <configurator type="Foundation.HtmlCache.Configuration.ServicesConfigurator, Foundation.HtmlCache" role:require="Standalone or ContentDelivery"/>
-      <configurator type="Foundation.HtmlCache.Configuration.ServicesConfiguratorCm, Foundation.HtmlCache" role:require="Standalone or ContentManagement"/>
+      <!-- point to point -->
+      <register
+        serviceType="Sitecore.Framework.Messaging.IMessageHandler`1[[Foundation.HtmlCache.Messages.AddToCache, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions"
+        implementationType="Foundation.HtmlCache.Handlers.AddToCacheBusMessageHandler, Foundation.HtmlCache"
+        lifetime="Transient" role:require="Standalone or ContentDelivery"/>
+      <register
+        serviceType="Sitecore.Framework.Messaging.IMessageHandler`1[[Foundation.HtmlCache.Messages.AddToCacheStore, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions"
+        implementationType="Foundation.HtmlCache.Handlers.AddToCacheBusMessageHandler, Foundation.HtmlCache"
+        lifetime="Transient" role:require="Standalone or ContentManagement"/>
+      <register
+        serviceType="Sitecore.Framework.Messaging.IMessageHandler`1[[Foundation.HtmlCache.Messages.RecomputePersistedHtmlCache, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions"
+        implementationType="Foundation.HtmlCache.Handlers.RecomputePersistedHtmlCacheBusMessageHandler, Foundation.HtmlCache"
+        lifetime="Transient" role:require="Standalone or ContentManagement"/>
+
+      <!-- pub/sub-->
+      <register
+        serviceType="Sitecore.Processing.Tasks.Messaging.ISynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Messages.DeleteFromCache, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        implementationType="Sitecore.Processing.Tasks.Messaging.SynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Handlers.DeleteFromCacheBusMessageHandler, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        lifetime="Transient" role:require="Standalone or ContentDelivery"/>
+      <register
+        serviceType="Sitecore.Processing.Tasks.Messaging.ISynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Messages.DeleteSiteFromCache, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        implementationType="Sitecore.Processing.Tasks.Messaging.SynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Handlers.DeleteSiteFromCacheBusMessageHandler, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        lifetime="Transient" role:require="Standalone or ContentDelivery"/>
+      <register
+        serviceType="Sitecore.Processing.Tasks.Messaging.ISynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Messages.BroadcastCache, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        implementationType="Sitecore.Processing.Tasks.Messaging.SynchronizedMessageBusContext`1[[Sitecore.Framework.Messaging.IMessageBus`1[[Foundation.HtmlCache.Handlers.BroadcastCacheBusMessageHandler, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions]], Sitecore.Processing.Tasks.Messaging"
+        lifetime="Transient" role:require="Standalone or ContentDelivery"/>
+
+      <!-- <configurator type="Foundation.HtmlCache.Configuration.ServicesConfigurator, Foundation.HtmlCache" role:require="Standalone or ContentDelivery"/> -->
+      <!-- <configurator type="Foundation.HtmlCache.Configuration.ServicesConfiguratorCm, Foundation.HtmlCache" role:require="Standalone or ContentManagement"/> -->
     </services>
 
     <contentSearch>
