--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -73,6 +73,7 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.DependencyInjection.2.1.1\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
       <Private>False</Private>
@@ -88,20 +89,6 @@
       <HintPath>packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Sitecore.ContentSearch, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Sitecore.ContentSearch.NoReferences.9.0.180604\lib\NET462\Sitecore.ContentSearch.dll</HintPath>
-    </Reference>
-    <Reference Include="Sitecore.ContentSearch.Linq, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Sitecore.ContentSearch.Linq.NoReferences.9.0.180604\lib\NET462\Sitecore.ContentSearch.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="Sitecore.Framework.Messaging.Abstractions, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Sitecore.Framework.Messaging.Abstractions.4.0.1\lib\netstandard2.0\Sitecore.Framework.Messaging.Abstractions.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Sitecore.Framework.Messaging.Configuration, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Sitecore.Framework.Messaging.Configuration.4.0.1\lib\netstandard2.0\Sitecore.Framework.Messaging.Configuration.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Sitecore.Kernel, Version=11.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Sitecore.Kernel.NoReferences.9.0.180604\lib\NET462\Sitecore.Kernel.dll</HintPath>
       <Private>False</Private>
@@ -110,7 +97,16 @@
       <HintPath>packages\Sitecore.Mvc.NoReferences.9.0.180604\lib\NET462\Sitecore.Mvc.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="StackExchange.Redis.StrongName, Version=1.2.6.0, Culture=neutral, PublicKeyToken=c219ff1ca8c2ce46, processorArchitecture=MSIL">
+      <HintPath>packages\StackExchange.Redis.StrongName.1.2.6\lib\net46\StackExchange.Redis.StrongName.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.ConfigurationManager, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Configuration.ConfigurationManager.4.6.0\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -130,17 +126,12 @@
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus\HtmlCacheMessageBusPublisher.cs" />
+    <Compile Include="Connections\IRedisSharedConnection.cs" />
+    <Compile Include="Connections\RedisSharedConnection.cs" />
     <Compile Include="Events\ItemPrePublish.cs" />
-    <Compile Include="Handlers\RecomputePersistedHtmlCacheBusMessageHandler.cs" />
-    <Compile Include="Handlers\BroadcastCacheBusMessageHandler.cs" />
-    <Compile Include="Handlers\AddToCacheStoreBusMessageHandler.cs" />
-    <Compile Include="Handlers\DeleteSiteFromCacheBusMessageHandler.cs" />
-    <Compile Include="Handlers\DeleteFromCacheBusMessageHandler.cs" />
-    <Compile Include="Handlers\AddToCacheBusMessageHandler.cs" />
-    <Compile Include="Bus\HtmlCacheMessageBusSend.cs" />
     <Compile Include="Commands\SiteClearCacheAllSitesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheCommand.cs" />
@@ -149,8 +140,6 @@
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
     <Compile Include="Messages\AddToCacheStore.cs" />
     <Compile Include="Messages\BroadcastCache.cs" />
-    <Compile Include="Messages\RecomputePersistedHtmlCache.cs" />
-    <Compile Include="Models\CacheStoreSearchResult.cs" />
     <Compile Include="Messages\SiteMetaData.cs" />
     <Compile Include="Messages\DeleteSiteFromCache.cs" />
     <Compile Include="Messages\DeleteFromCache.cs" />
@@ -162,13 +151,17 @@
     <Compile Include="Models\PublishOperation.cs" />
     <Compile Include="Messages\RenderingProcessorArgs.cs" />
     <Compile Include="Pipelines\InitializePersistedHtmlCache.cs" />
+    <Compile Include="Pipelines\InitializeRedisSubscribers.cs" />
     <Compile Include="Pipelines\SaveToPersistantCache.cs" />
     <Compile Include="Pipelines\RenderFromPersistantCache.cs" />
     <Compile Include="Pipelines\EndRenderingContext.cs" />
     <Compile Include="Pipelines\BeginRenderingContext.cs" />
-    <Compile Include="Pipelines\InitializeMessageBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\IRedisCacheProvider.cs" />
+    <Compile Include="Providers\IRedisRenderingCacheManager.cs" />
     <Compile Include="Providers\ItemTrackingStore.cs" />
+    <Compile Include="Providers\RedisCacheProvider.cs" />
+    <Compile Include="Providers\RedisRenderingCacheManager.cs" />
     <Compile Include="Providers\TrackItemAccess.cs" />
     <Compile Include="Settings\GlobalCacheTemplateSettings.cs" />
   </ItemGroup>
