--- a/code/packages.config
+++ b/code/packages.config
@@ -7,10 +7,8 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
-  <package id="Sitecore.ContentSearch.Linq.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Framework.Messaging.Abstractions" version="4.0.1" targetFramework="net462" />
-  <package id="Sitecore.Framework.Messaging.Configuration" version="4.0.1" targetFramework="net462" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.6" targetFramework="net462" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net462" />
 </packages>
