Nearly finished with this.... need to reorganise such that AddToCache and AddToCacheStore are one and the same.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -17,6 +17,9 @@
         <patch:attribute name="value">false</patch:attribute>
       </setting>
 
+      <setting name="redisConnectionString" value="192.168.50.3:6379,password=qZtsyp0TR2Ay,ssl=False,abortConnect=False" />
+      <setting name="redisDatabase" value="15" />
+
     </settings>
     <pipelines>
       <initialize>
