prelimnary checkin for sql cahe tracking.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -8,18 +8,11 @@
     <settings>
       <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
       <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
-      <setting name="PersistRecordedHtml" value="true" />
-
-      <setting name="MaxItemNameLength" value="100">
-        <patch:attribute name="value">3000</patch:attribute>
-      </setting>
-      <setting name="AllowDuplicateItemNamesOnSameLevel" value="true">
-        <patch:attribute name="value">false</patch:attribute>
-      </setting>
-
-      <setting name="redisConnectionString" value="192.168.50.3:6379,password=qZtsyp0TR2Ay,ssl=False,abortConnect=False" />
+      <!-- <setting name="redisConnectionString" value="192.168.50.3:6379,password=qZtsyp0TR2Ay,ssl=False,abortConnect=False" /> -->
       <setting name="redisDatabase" value="15" />
-
+      <!--this setting informs the redis subscriber that only one processor is required for this type-->
+      <setting name="redisCompetingConsumerMessageTypes" value="AddToCache|DeleteFromCache|DeleteSiteFromCache" role:require="Standalone or ContentManagement"/>
+      
     </settings>
     <pipelines>
       <initialize>
@@ -72,18 +65,18 @@
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
     <services>
-      <register
-        serviceType="Foundation.HtmlCache.Connections.IRedisSharedConnection, Foundation.HtmlCache"
-        implementationType="Foundation.HtmlCache.Connections.RedisSharedConnection, Foundation.HtmlCache"
-        lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/>
+      <!-- <register -->
+      <!--   serviceType="Foundation.HtmlCache.Connections.IRedisSharedConnection, Foundation.HtmlCache" -->
+      <!--   implementationType="Foundation.HtmlCache.Connections.RedisSharedConnection, Foundation.HtmlCache" -->
+      <!--   lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/> -->
       <register
         serviceType="Foundation.HtmlCache.Providers.IRedisCacheProvider, Foundation.HtmlCache"
         implementationType="Foundation.HtmlCache.Providers.RedisCacheProvider, Foundation.HtmlCache"
         lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/>
-      <register
-        serviceType="Foundation.HtmlCache.Providers.IRedisRenderingCacheManager, Foundation.HtmlCache"
-        implementationType="Foundation.HtmlCache.Providers.RedisRenderingCacheManager, Foundation.HtmlCache"
-        lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/>
+      <!-- <register -->
+      <!--   serviceType="Foundation.HtmlCache.Providers.IRedisRenderingCacheManager, Foundation.HtmlCache" -->
+      <!--   implementationType="Foundation.HtmlCache.Providers.RedisRenderingCacheManager, Foundation.HtmlCache" -->
+      <!--   lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/> -->
     </services>
   </sitecore>
 </configuration>
