--- a/code/packages.config
+++ b/code/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net462" />
@@ -7,8 +8,8 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
-  <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Mvc" version="9.2.0" targetFramework="net472" />
   <package id="StackExchange.Redis.StrongName" version="1.2.6" targetFramework="net462" />
   <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net462" />
 </packages>
