SQL database is now being used to track items successfully in a multithreaded environment with many to many working correctly.

--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -190,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Foundation\Foundation.HtmlCache.Serialization.config" />
+    <Content Include="Scripts\SQL\schema.sql" />
     <Content Include="sitecore\admin\HtmlCacheViewer.aspx" />
     <Content Include="App_Config\Include\zFoundation\zFoundation.HtmlCache.config" />
     <None Include="packages.config" />
