Removed Redis - Going back to events.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -8,15 +8,9 @@
     <settings>
       <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
       <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
-      <!-- <setting name="redisConnectionString" value="192.168.50.3:6379,password=qZtsyp0TR2Ay,ssl=False,abortConnect=False" /> -->
-      <setting name="redisDatabase" value="15" />
-      <!--this setting informs the redis subscriber that only one processor is required for this type-->
-      <setting name="redisCompetingConsumerMessageTypes" value="AddToCache|DeleteFromCache|DeleteSiteFromCache" role:require="Standalone or ContentManagement"/>
-      
     </settings>
     <pipelines>
       <initialize>
-        <processor type="Foundation.HtmlCache.Pipelines.InitializeRedisSubscribers, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentManagement or ContentDelivery" />
         <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
       </initialize>
       <mvc.renderRendering>
@@ -31,7 +25,7 @@
           patch:before="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
         <processor
           type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache"
-          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.AddRecordedHtmlToCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
+          patch:before="processor[@type='Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
       </mvc.renderRendering>
       <group name="itemProvider" groupName="itemProvider">
         <pipelines>
@@ -45,10 +39,10 @@
     </pipelines>
     <events>
       <event name="publish:itemProcessing">
-        <handler type="Foundation.HtmlCache.Events.ItemPrePublish, Foundation.HtmlCache" method="CalculatePublishOperation" role:require="Standalone or ContentManagement"/>
+        <handler type="Foundation.HtmlCache.Events.ItemPrePublish, Foundation.HtmlCache" method="PreCalculatePublishOperation" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:itemProcessed">
-        <handler type="Foundation.HtmlCache.Events.ItemPublishMessenger, Foundation.HtmlCache" method="PublishItemPublishMessage" role:require="Standalone or ContentManagement"/>
+        <handler type="Foundation.HtmlCache.Events.ItemPostPublish, Foundation.HtmlCache" method="PostCalculatePublishOperation" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:end">
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
@@ -64,19 +58,5 @@
     <controlSources>
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
-    <services>
-      <!-- <register -->
-      <!--   serviceType="Foundation.HtmlCache.Connections.IRedisSharedConnection, Foundation.HtmlCache" -->
-      <!--   implementationType="Foundation.HtmlCache.Connections.RedisSharedConnection, Foundation.HtmlCache" -->
-      <!--   lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/> -->
-      <register
-        serviceType="Foundation.HtmlCache.Providers.IRedisCacheProvider, Foundation.HtmlCache"
-        implementationType="Foundation.HtmlCache.Providers.RedisCacheProvider, Foundation.HtmlCache"
-        lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/>
-      <!-- <register -->
-      <!--   serviceType="Foundation.HtmlCache.Providers.IRedisRenderingCacheManager, Foundation.HtmlCache" -->
-      <!--   implementationType="Foundation.HtmlCache.Providers.RedisRenderingCacheManager, Foundation.HtmlCache" -->
-      <!--   lifetime="Singleton" role:require="Standalone or ContentManagement or ContentDelivery"/> -->
-    </services>
   </sitecore>
 </configuration>
