--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -102,9 +102,6 @@
     <Reference Include="Sitecore.Mvc, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Sitecore.Mvc.9.2.0\lib\net471\Sitecore.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="StackExchange.Redis.StrongName, Version=1.2.6.0, Culture=neutral, PublicKeyToken=c219ff1ca8c2ce46, processorArchitecture=MSIL">
-      <HintPath>packages\StackExchange.Redis.StrongName.1.2.6\lib\net46\StackExchange.Redis.StrongName.dll</HintPath>
-    </Reference>
     <Reference Include="sysglobl" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -156,7 +153,7 @@
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheCommand.cs" />
     <Compile Include="Controls\MultiRootTreeList.cs" />
-    <Compile Include="Events\ItemPublishMessenger.cs" />
+    <Compile Include="Events\ItemPostPublish.cs" />
     <Compile Include="Extensions\EFExtensions.cs" />
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
     <Compile Include="Messages\AddToCacheStore.cs" />
@@ -178,16 +175,13 @@
     <Compile Include="Models\PublishOperation.cs" />
     <Compile Include="Messages\RenderingProcessorArgs.cs" />
     <Compile Include="Pipelines\InitializePersistedHtmlCache.cs" />
-    <Compile Include="Pipelines\InitializeRedisSubscribers.cs" />
     <Compile Include="Pipelines\SaveToPersistantCache.cs" />
     <Compile Include="Pipelines\RenderFromPersistantCache.cs" />
     <Compile Include="Pipelines\EndRenderingContext.cs" />
     <Compile Include="Pipelines\BeginRenderingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\IRedisCacheProvider.cs" />
     <Compile Include="Providers\ItemTrackingProvider.cs" />
     <Compile Include="Providers\ItemTrackingStore.cs" />
-    <Compile Include="Providers\RedisCacheProvider.cs" />
     <Compile Include="Providers\TrackItemAccess.cs" />
     <Compile Include="Settings\GlobalCacheTemplateSettings.cs" />
   </ItemGroup>
